5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4376/executions/1613_1800.log
== SUBMITION (2019-04-04 15:41:33) 
-- CODE:
a=float(input("digite o alor de A:   "))
b=float(input("digite o alor de b:   "))
c=float(input("digite o alor de c:   "))
d=(a**2+b**2+c**2)/(a+b+c)
print(round(d,7))
Fim da conversa no bate-papo
Digite uma mensagem...


-- EXECUTION TIME:
0.212771
-- ERROR:
  File "/home/codebench/codes/1613/1800/main.py", line 6
    Fim da conversa no bate-papo
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:41:43) 
-- CODE:
a=float(input("digite o alor de A:   "))
b=float(input("digite o alor de b:   "))
c=float(input("digite o alor de c:   "))
d=(a**2+b**2+c**2)/(a+b+c)
print(round(d,7))


-- EXECUTION TIME:
0.150938
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
digite o alor de A:   digite o alor de b:   digite o alor de c:   25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
digite o alor de A:   digite o alor de b:   digite o alor de c:   342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
digite o alor de A:   digite o alor de b:   digite o alor de c:   106.1509434
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:41:45) 
-- CODE:
a=float(input("digite o alor de A:   "))
b=float(input("digite o alor de b:   "))
c=float(input("digite o alor de c:   "))
d=(a**2+b**2+c**2)/(a+b+c)
print(round(d,7))


-- EXECUTION TIME:
0.179344
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
